[package]
name = "template-rust"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "app"
path = "src/main.rs"

[dependencies]
# async-trait = "0.1.57"
log = "0.4.17"
log4rs = "1.1.1"
# reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.5.0", features = ["json"] }
# tokio = { version = "1.20.1", features = ["full"] }
